--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.server.tls=true"
       - "traefik.http.routers.server.rule=Host(`paranjay-test.logicwind.co`)"
-     # - "traefik.http.services.server.loadbalancer.server.port=80"
+      - "traefik.http.services.server.loadbalancer.server.port=80"  #send traffic to containers port 80, because tindog listens on port 80
       - "traefik.http.routers.server.tls.certresolver=lets-encrypt"
     networks:
       - traefik
