--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.server.tls=true"
-      - "traefik.http.routers.server.rule=Host(`paranjay-test.logicwind.co`)"
+      - "traefik.http.routers.server.rule=Host(`paranjay-test.com`)"
       - "traefik.http.services.server.loadbalancer.server.port=80"  #send traffic to containers port 80, because tindog listens on port 80
       - "traefik.http.routers.server.tls.certresolver=lets-encrypt"
     networks:
